# relay-phone

./: README.md
apps/BLE-HFP-node/: .gitignore  CMakeLists.txt  build.sh  sdkconfig.defaults
apps/BLE-HFP-node/main/: CMakeLists.txt  audio.c  audio.h  bt.c  bt.h  bt_init.c  bt_init.h  buttons.c  buttons.h  config.c  config.h  gap.c  gap.h  idf_component.yml  main.c  phone.c  phone.h  ringtone.c  ringtone.h
apps/telephone-node/: CMakeLists.txt  sdkconfig  sdkconfig.defaults
apps/telephone-node/main/: CMakeLists.txt  idf_component.yml  main.c
